<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">
    <string name="app_name">Furry_Friends</string>
    <string name="home">home</string>
    <string name="routine">routine</string>
    <string name="setting">setting</string>
    <string name="add_checklist">checklist</string>
    <string name="writing">writing</string>
    <string name="hello">안녕하세요!&#160;%s님</string>
    <string name="hello_null">안녕하세요!</string>
    <string name="topic">Calendar</string>
    <string name="forget_pwd_text">Forget password?</string>
    <string name="sign_in_text">가입하기</string>
    <string name="log_in_text">로그인</string>
    <string name="id_hint_text">아이디</string>
    <string name="pwd_hint_text">비밀번호</string>
    <string name="signin">가입하기</string>
    <string name="first_visit">처음 오셨나요?</string>
    <string name="email_hint_text">이메일</string>
    <string name="change">변경</string>
    <string name="today_do">오늘의 글귀</string>
    <string name="submit">등록</string>
    <string name="name">이름을 입력해주세요</string>
    <string name="sex">성별: &#160;</string>
    <string name="age">생년월일을 입력해주세요</string>
    <string name="weight">몸무게(Kg)를 입력해주세요</string>
    <string name="neutered">중성화 여부:&#160;</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="submit_animal_info">반려동물 정보 등록</string>
    <string name="_2023">2023년</string>
    <string name="eatQuantity">식사량을 입력해주세요</string>
    <string name="poobQuantity">배변량을 입력해주세요</string>
    <string name="other">기타 작성할 내용을 입력해주세요</string>
    <string name="tab_day_text">일상</string>
    <string name="tab_diagnosis_text">진단</string>
    <string name="add">add</string>
    <string name="notice">추가 버튼을 눌러 글을 작성해보세요 :)</string>
    <string name="title">제목을 입력해주세요</string>
    <string name="description">글을 입력해주세요</string>
    <string name="daily_writing">일상 기록</string>
    <string name="save_writing">저장</string>
    <string name="diagnosis_writing">진단 기록</string>
    <string name="app_setting">내 정보 및 설정</string>
    <string name="animal_info">반려동물 정보</string>
    <string name="logout">로그아웃</string>
    <string name="opensource_license">오픈소스 라이센스</string>
    <string name="withdraw_user">회원탈퇴</string>
    <string name="retry">재시도</string>
    <string name="cancel">취소</string>
    <string name="loading">로딩중…</string>
    <string name="weights">몸무게:</string>
    <string name="require_login">로그인 후, 서비스 이용이 가능합니다.</string>
    <string name="failed_login">로그인에 실패하였습니다.</string>
    <string name="error_response">오류 발생</string>
    <string name="failed_sign_in">회원가입에 실패하였습니다.</string>
    <string name="submit_animal">반려동물을 등록하세요:)</string>
    <string name="failed_submit_animal">반려동물 등록에 실패했습니다.</string>
    <string name="load_fail_animal_info">정보를 불러오는데 실패하였습니다.</string>
    <string name="not_loged_in">로그인 되어있지 않음</string>
    <string name="not_register_animal">동물 등록이 되어있지 않음</string>
    <string name="add_routine">루틴 추가</string>
    <string name="exist_routine">이미 존재하는 루틴</string>
    <string name="sunday">일요일</string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="error">오류</string>
    <string name="add_animal">추가</string>
    <string name="failed_update_animal">수정에 실패했습니다</string>
    <string name="failed_submit_daily">일상 기록 등록에 실패했습니다.</string>
    <string name="deleteProfile">프로필 삭제</string>
    <string name="kg">kg</string>
    <string name="update_animal">정보 수정</string>
    <string name="update">수정</string>
    <string name="kindAndArea">종 및 부위</string>
    <string name="diagnosis_name">결과</string>
    <string name="select_animal">반려 동물 변경</string>
    <string name="waiting_you">여러분을 기다리는 중이에요!</string>
    <string name="not_register_animals">반려동물 등록이 되지 않았어요!</string>
    <string name="unknown_error">알 수 없는 오류가 발생했어요</string>
    <string name="no_response">데이터 없음</string>
    <string name="sun_writing">오늘은 일요일이에요 \n이번 주 잘 마무리 하셨나요?\n오늘은 푹 쉬어요~</string>
    <string name="mon_writing">오늘은 월요일이에요 \n한 주를 즐겁게 시작해봐요!! \n이번 주도 화이팅!</string>
    <string name="tue_writing">오늘은 화요일이에요 \n이번 주 계획은 잘 세우셨나요? \n오늘도 화이팅!</string>
    <string name="wed_writing">오늘은 수요일이에요 \n벌써 수요일이네요~ 시간이 참 빠른거같아요 \n오늘도 화이팅!</string>
    <string name="thu_writing">오늘은 목요일이에요 \n이번 주의 절반이 지나가는군요! \n남은 날도 화이팅!</string>
    <string name="fri_writing">오늘은 금요일이에요 \n신나는 금요일이에요 \n내일부턴 주말이니 오늘도 화이팅해봐요!</string>
    <string name="sat_writing">오늘은 토요일이에요 \n한 주의 끝이 다가왔네요~ \n우리 아이와 함께 잘 놀아봐요~</string>
    <string name="similar">비슷한 증상</string>
</resources>