<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home"
        android:enabled="true"
        android:title="@string/home"
        />
    <item
        android:id="@+id/routine"
        android:icon="@drawable/ic_routine"
        android:enabled="true"
        android:title="@string/routine"
        />

    <item
        android:id="@+id/checklist"
        android:icon="@drawable/post_add"
        android:enabled="true"
        android:title="@string/add_checklist"
        />

    <item
        android:id="@+id/writing"
        android:icon="@drawable/photo_library"
        android:enabled="true"
        android:title="@string/writing"
        />


    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_gray"
        android:enabled="true"
        android:title="@string/setting"
        />
</menu>