<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/submit_animal_info"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:textSize="20sp"
                />
            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_op"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_member"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="6dp"
                app:cardCornerRadius="100dp"
>
<!--                <ImageView-->
<!--                    android:id="@+id/iv_member"-->
<!--                    android:layout_width="200dp"-->
<!--                    android:layout_height="200dp"-->
<!--                    android:src="@drawable/ic_baseline_add_circle_outline"-->

<!--                    tools:srcCompat="@tools:sample/avatars" />-->
                <ImageButton
                    android:id="@+id/iv_member"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:background="@drawable/dash_line"
                    android:contentDescription="uploadFile"
                    app:srcCompat="@drawable/add_screen_image_placeholder" />
            </androidx.cardview.widget.CardView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_animal_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_animal_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/age"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_animal_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.03"
                    />
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_radio_button"
                        android:textColor="@drawable/selector_radio_text"
                        android:button="@null"
                        android:textAlignment="center"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_radio_button"
                        android:textColor="@drawable/selector_radio_text"
                        android:button="@null"
                        android:textAlignment="center"
                        android:text="@string/female" />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neutered"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.03"
                    />
                <CheckBox
                    android:id="@+id/idNeutered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style_reverse"
                android:text="@string/submit"
                android:textColor="@color/main_color"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>