<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_pets_24" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/sign_in_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_signin_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/gray"
                    android:hint="@string/id_hint_text"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/menu_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwdInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/cardview_backgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_signin_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/gray"
                    android:hint="@string/pwd_hint_text"
                    android:inputType="textPassword"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/menu_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rePwdInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/cardview_backgroundColor">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_signin_pwd_chk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/gray"
                    android:hint="비밀번호 확인"
                    android:inputType="textPassword"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/menu_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/EditTextAppStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/menu_color"
                android:theme="@style/EditTextAppStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_signin_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:drawableStart="@drawable/outline_badge_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/gray"
                    android:hint="@string/email_hint_text"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/menu_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:text="@string/sign_in_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/button_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/log_in_text"
                android:textColor="@color/main_color" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>